# esp32_pro

./: .gitignore  CMakeLists.txt  Makefile  sdkconfig  sdkconfig.old
html/: config_wifi.html
main/: CMakeLists.txt  app_main.c  component.mk
main/http_webserver/: http_server_app.c  http_server_app.h
main/hw_api/: hw_api.c  hw_api.h
main/mqtt/: mqtt.c  mqtt.h
main/wifi_app/: wifi_app.c  wifi_app.h
